Correct spacing

--- a/css/certificate_section.css
+++ b/css/certificate_section.css
@@ -17,6 +17,7 @@
     position: relative;
     background: transparent;
     z-index: 1;
+    margin-top: -50px;
 }
 
 .cert-title {
