--- a/css/logoSection.css
+++ b/css/logoSection.css
@@ -4,6 +4,7 @@
 ================================ */
 
 .logo-train-section {
+    margin-top: -120px;
     padding: 120px 20px;
     text-align: center;
     position: relative;
