--- a/css/roadMap.css
+++ b/css/roadMap.css
@@ -5,6 +5,7 @@
     margin: auto;
     padding: 120px 20px;
     position: relative;
+    margin-top: -50px;
 }
 
 /* ================= HEADER ================= */
